tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/efs_mount_target/unused_security_group_existing/account-data/dev/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "2021-04-12T06:14:52.789Z",
            "GroupId": "sg-00aa995205a07db73",
            "GroupName": "wdsgwd-7391",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "Master group for Elastic MapReduce created on 2021-05-10T17:16:03.004Z",
            "GroupId": "sg-01182e49a937822f8",
            "GroupName": "ElasticMapReduce-master",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": 8443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "207.171.167.25/32"
                        },
                        {
                            "CidrIp": "54.240.217.8/29"
                        },
                        {
                            "CidrIp": "72.21.196.64/29"
                        },
                        {
                            "CidrIp": "72.21.198.64/29"
                        },
                        {
                            "CidrIp": "54.240.217.16/29"
                        },
                        {
                            "CidrIp": "54.239.98.0/24"
                        },
                        {
                            "CidrIp": "207.171.167.101/32"
                        },
                        {
                            "CidrIp": "207.171.167.26/32"
                        },
                        {
                            "CidrIp": "72.21.217.0/24"
                        },
                        {
                            "CidrIp": "54.240.217.80/29"
                        },
                        {
                            "CidrIp": "54.240.217.64/28"
                        },
                        {
                            "CidrIp": "207.171.172.6/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 8443,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "for-use-with-amazon-emr-managed-policies",
                    "Value": "true"
                }
            ],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "2021-04-12T06:05:46.886Z",
            "GroupId": "sg-01e0339dfecd2cb96",
            "GroupName": "dfgdfa-3216",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-026937c7d95792591",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-026937c7d95792591",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0e9375ba4a3ae6f96"
        },
        {
            "Description": "allow-all-local",
            "GroupId": "sg-038324405c4755fe8",
            "GroupName": "terraform-20210620083447264700000004",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "192.168.100.128/25"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "192.168.100.128/25"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-084c1223033569844"
        },
        {
            "Description": "ELB created security group used when no security group is specified during ELB creation - modifications could impact traffic to future ELBs",
            "GroupId": "sg-03ea6dbd2c5f84c7e",
            "GroupName": "default_elb_18295f8f-187f-336d-9938-11ed04392220",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "2021-04-12T06:50:54.484Z",
            "GroupId": "sg-05535afe52b5d8dea",
            "GroupName": "Cloudr-8631",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "Security Group for cloudrail-dev-imanuel RDS Instance",
            "GroupId": "sg-066dcae2727b42cb5",
            "GroupName": "cloudrail-dev-imanuel-DB-SG",
            "IpPermissions": [
                {
                    "FromPort": 5432,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "10.20.0.0/20",
                            "Description": "Access from 10.20.0.0/20"
                        },
                        {
                            "CidrIp": "172.16.0.0/16",
                            "Description": "access from jenkins (added manually)"
                        },
                        {
                            "CidrIp": "192.168.0.0/16",
                            "Description": "access from office VPN (added manually)"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Access from Lambdas",
                            "GroupId": "sg-0e00ef6a82ba2f914",
                            "UserId": "115553109071"
                        },
                        {
                            "Description": "Access from Step_Functions",
                            "GroupId": "sg-0fd0d8d546726a80d",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "cloudrail-dev-imanuel-DBSG"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-1 (2021-01-26T13:00:56.364Z)",
            "GroupId": "sg-07fa9e7a8d86198f6",
            "GroupName": "AutoScaling-Security-Group-1",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-2 created 2020-11-05T17:50:30.273+02:00",
            "GroupId": "sg-08e6d4bd0c8974903",
            "GroupName": "launch-wizard-2",
            "IpPermissions": [
                {
                    "FromPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3389,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AutoScaling-Security-Group-5 (2021-03-24T14:29:05.080Z)",
            "GroupId": "sg-095fd64073d50d8b3",
            "GroupName": "AutoScaling-Security-Group-5",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "allow https",
            "GroupId": "sg-09e29fbc3bb0cdc70",
            "GroupName": "terraform-20210620083447264300000003",
            "IpPermissions": [
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "192.168.100.128/25"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-084c1223033569844"
        },
        {
            "Description": "launch-wizard-1 created 2021-02-17T14:13:13.583+02:00",
            "GroupId": "sg-0b6209fa0de777669",
            "GroupName": "launch-wizard-1",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0bf5ac285a77c2c57",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0bf5ac285a77c2c57",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-084c1223033569844"
        },
        {
            "Description": "AutoScaling-Security-Group-6 (2021-04-12T09:32:49.439Z)",
            "GroupId": "sg-0c4e3c726c45b164a",
            "GroupName": "AutoScaling-Security-Group-6",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-0c586f1b108649fdf",
            "GroupName": "terraform-20210620083448250200000001",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0e9375ba4a3ae6f96"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-0c7e3f01696be42bd",
            "GroupName": "Unused security group",
            "IpPermissions": [
                {
                    "FromPort": 53,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0e9375ba4a3ae6f96"
        },
        {
            "Description": "Security Group for Lambda",
            "GroupId": "sg-0e00ef6a82ba2f914",
            "GroupName": "Cloudrail-dev-imanuel-Lambda-Security-Group",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Egress default rule"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Lambda-SG"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-4 (2021-03-24T14:22:17.036Z)",
            "GroupId": "sg-0e1dd968f2627ac7b",
            "GroupName": "AutoScaling-Security-Group-4",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-3 created 2021-02-01T08:21:31.616+02:00",
            "GroupId": "sg-0e26b22aceacae711",
            "GroupName": "launch-wizard-3",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AutoScaling-Security-Group-2 (2021-03-24T13:08:00.268Z)",
            "GroupId": "sg-0e40c392369ac58cb",
            "GroupName": "AutoScaling-Security-Group-2",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0ee85b077999bd139",
            "GroupName": "default",
            "IpPermissions": [],
            "IpPermissionsEgress": [],
            "OwnerId": "115553109071",
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-3 (2021-03-24T14:17:50.960Z)",
            "GroupId": "sg-0f4c17f6d1e7c394c",
            "GroupName": "AutoScaling-Security-Group-3",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "Slave group for Elastic MapReduce created on 2021-05-10T16:57:04.181Z",
            "GroupId": "sg-0fb8dd6e1fb219f94",
            "GroupName": "ElasticMapReduce-slave",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-01182e49a937822f8",
                            "UserId": "115553109071"
                        },
                        {
                            "GroupId": "sg-0fb8dd6e1fb219f94",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "for-use-with-amazon-emr-managed-policies",
                    "Value": "true"
                }
            ],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "SG for Step Functions",
            "GroupId": "sg-0fd0d8d546726a80d",
            "GroupName": "Cloudrail-dev-imanuel-Step-Functions-SG",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow incoming TCP port 80 - step function SG"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow all outgoing traffic - step function SG"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Step-Functions-SG"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-37970008",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-37970008",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        }
    ]
}
