tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/efs_mount_target/unused_security_group_existing/account-data/dev/us-east-1/efs-describe-file-systems.json
{
    "FileSystems": [
        {
            "CreationTime": "2021-06-20T11:34:40+03:00",
            "CreationToken": "cloudrail-encrypted",
            "Encrypted": true,
            "FileSystemArn": "arn:aws:elasticfilesystem:us-east-1:115553109071:file-system/fs-de81126a",
            "FileSystemId": "fs-de81126a",
            "KmsKeyId": "arn:aws:kms:us-east-1:115553109071:key/b2392732-2003-47ee-abc3-2848b59f6328",
            "LifeCycleState": "available",
            "Name": "Encrypted",
            "NumberOfMountTargets": 1,
            "OwnerId": "115553109071",
            "PerformanceMode": "generalPurpose",
            "SizeInBytes": {
                "Value": 6144,
                "ValueInIA": 0,
                "ValueInStandard": 6144
            },
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Encrypted"
                }
            ],
            "ThroughputMode": "bursting"
        }
    ]
}
